--- a/aws_tool_calling.ipynb
+++ b/aws_tool_calling.ipynb
@@ -76,8 +76,8 @@
     "\n",
     "def create_ec2_instance(instance_type, ami_id, min_count, max_count):\n",
     "    session = boto3.Session(\n",
-    "        aws_access_key_id='AKIATC6T4G7Y7QLGNSVN',\n",
-    "        aws_secret_access_key='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',\n",
+    "        aws_access_key_id='',\n",
+    "        aws_secret_access_key='',\n",
     "        region_name='us-east-1'\n",
     "    )\n",
     "\n",
