--- a/aws_tool_calling.ipynb
+++ b/aws_tool_calling.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "from anthropic import Anthropic\n",
     "\n",
     "\n",
-    "client = Anthropic(api_key=\"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\")\n",
+    "client = Anthropic(api_key=\"\")\n",
     "\n"
    ]
   },
