--- a/aws_tool_calling.ipynb
+++ b/aws_tool_calling.ipynb
@@ -9,7 +9,7 @@
     "from anthropic import Anthropic\n",
     "\n",
     "\n",
-    "client = Anthropic(api_key=\"\")\n",
+    "client = Anthropic()\n",
     "\n"
    ]
   },
